--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ h1{
 .separator{    
     width: 120px;
     border-bottom: 3px solid #29ABE2;
-    margin: 16px 0 32px 0;
+    margin-top: 16px;
 }
 
 form{
@@ -100,7 +100,7 @@ form{
     display: flex;
     align-items: center;
     cursor: pointer;
-    margin-bottom: 32px;    
+    margin-top: 32px;    
 }
 
 .input-log-in{
@@ -118,19 +118,23 @@ input:focus{
     border: 1px solid #29abe2;
 }
 
+input:hover{
+    cursor: pointer;
+}
+
 ::placeholder{
     color: #d1d1d1;
 }
 
 .error-message {
-    color: red;
+    color: #ff8190;
     font-size: 14px;
     margin-top: 5px;
     margin-bottom: 32px;
 }
 
 input.error {
-    border-color: red;
+    border-color: #ff8190;
 }
 
 .icon {
