--- a/boardTest/boardEditTask.css
+++ b/boardTest/boardEditTask.css
@@ -70,6 +70,8 @@
 #check-submit-container {
     height: 24px;
     width: 24px;
+    display: flex;
+    align-items: center;
 }
 
 #new-subtask-list-edit-container {
