max 6 COntactIcons angezeigt in Tasks

--- a/css/addTask.css
+++ b/css/addTask.css
@@ -559,6 +559,7 @@ h1 {
 #board-selected-contacts-circle-container {
     display: flex;
     gap: 8px;
+    align-items: center;
 }
 
 .uncheckedBox {
