--- a/boardTest/board2.css
+++ b/boardTest/board2.css
@@ -960,7 +960,7 @@ label {
     }
 }
 
-@media (max-width: 570px) {
+@media (max-width: 600px) {
     #hidden-button-desktop {
         display: flex;
     }
@@ -984,9 +984,6 @@ label {
     .search-input {
         margin-left: 0;
     }
-}
-
-@media (max-width: 425px) {
     .board-header {
         display: flex;
         flex-wrap: wrap;
@@ -1046,5 +1043,59 @@ label {
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: normal;
+    }
+
+    .board-header-left-top {
+        align-items: center;
+        padding-bottom: 10px;
+    }
+    .h1-board {
+        font-size: 30px;
+    }
+    .create-task-from-board {
+        width: 40px;
+        height: 40px;
+    }
+    .search-input {
+        height: 24px;
+    }
+    .search-input::placeholder {
+        font-size: 14px;
+    }
+    .separator-line {
+        height: 15px;
+    }
+    .search {
+        padding: 5px 5px;
+        height: 20px;
+        width: 20px;
+    }
+    .search-icons button img {
+        height: 12px;
+    }
+    
+    .board-header { 
+        top: 75px;
+    }
+    .board-overview {
+        transform: scale(0.95);
+        top: 80px;
+        max-height: calc(100vh - 246px);
+        margin-left: 10px;
+        margin-right: 10px; 
+    }
+    .tasks-container {
+        
+        padding-top: 0;
+        max-height: 88%;
+    }
+    .task {
+        transform: scale(0.65);
+        margin-right: 0;
+        margin-bottom: 0;
+        
+    }
+    .column-header {
+        margin-bottom: 5px;
     }
 }
