--- a/boardTest/board2.css
+++ b/boardTest/board2.css
@@ -1085,17 +1085,23 @@ label {
         margin-right: 10px; 
     }
     .tasks-container {
-        
         padding-top: 0;
-        max-height: 88%;
+        max-height: 180px;
+        margin-top: -10px;
     }
     .task {
         transform: scale(0.65);
-        margin-right: 0;
-        margin-bottom: 0;
-        
+        margin-top: -20px;
+        margin-bottom: -20px;
+        margin-right: -38px;
+        margin-left: -38px;
     }
     .column-header {
+        transform: scale(0.90);
         margin-bottom: 5px;
+        max-width: 172px;
+    }
+    .sideBarMenu {
+        flex-direction: row;
     }
 }
