--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ h1{
 .separator{    
     width: 120px;
     border-bottom: 3px solid #29ABE2;
+    margin: 16px 0 32px 0;
     margin-top: 16px;
 }
 
@@ -100,7 +101,7 @@ form{
     display: flex;
     align-items: center;
     cursor: pointer;
-    margin-top: 32px;    
+    margin-bottom: 32px;    
 }
 
 .input-log-in{
@@ -129,7 +130,7 @@ input:hover{
 .error-message {
     color: #ff8190;
     font-size: 14px;
-    margin-top: 5px;
+    margin-top: -27px;
     margin-bottom: 32px;
 }
 
