--- a/boardTest/board2.css
+++ b/boardTest/board2.css
@@ -824,6 +824,13 @@ label {
     z-index: 1000;
 }
 
+.task-placeholder {
+    background-color: rgba(0, 0, 0, 0.1);
+    border: 2px dashed #ccc;
+    border-radius: 24px;
+    box-sizing: border-box;
+}
+
 #hidden-button-desktop {
     display: none;
 }
