adjusted hover effect for contact item in responsive

--- a/css/contactsResponsive1.css
+++ b/css/contactsResponsive1.css
@@ -342,6 +342,9 @@
         transform: translateY(100%);
         opacity: 0;
     }
+    .contact-item{
+        width: 100%;
+    }
 }
 
 @media (max-width: 768px) {
