avoid box-sizing: border-box

--- a/css/boardMain.css
+++ b/css/boardMain.css
@@ -2,6 +2,10 @@ body {
     margin: 0 !important;
 }
 
+.no-border-box * {
+    box-sizing: initial;
+}
+
 .board-header {
     display: flex;
     position: relative;
