--- a/css/header.css
+++ b/css/header.css
@@ -27,12 +27,12 @@ header {
 }
 
 .headerSpan {
-    margin-left: 348px; 
+    margin-left: 348px;
 }
 
 .helpAndUserProfile {
-    margin-left: auto; 
-    margin-right: 5%; 
+    margin-left: auto;
+    margin-right: 5%;
     display: flex;
     gap: 20px;
     align-items: center;
@@ -76,7 +76,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 64px 0px 64px 0px;
-    box-sizing: content-box !important;
+    box-sizing: content-box;
 }
 
 .imgWrapper img {
@@ -97,6 +97,7 @@ header {
     flex-direction: column;
     gap: 15px;
     margin-bottom: 200px;
+    width: 100%;
 }
 
 .sideBarMenuButtons {
@@ -109,7 +110,7 @@ header {
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 56px;
-    width: 176px;
+    width: 100%;
 }
 
 .sideBarMenuButtons:hover {
@@ -212,8 +213,6 @@ header {
 .help-link {
     display: none;
 }
-
-
 
 @media (max-width: 1360px) {
     header {
@@ -348,8 +347,7 @@ header {
 }
 
 @media screen and (max-width: 824px) and (orientation: landscape) {
-    #landscape-warning{
+    #landscape-warning {
         display: flex;
     }
 }
-
