--- a/style.css
+++ b/style.css
@@ -119,9 +119,9 @@ input:focus{
     border: 1px solid #29abe2;
 }
 
-input:hover{
+/* input:hover{
     cursor: pointer;
-}
+} */
 
 ::placeholder{
     color: #d1d1d1;
