--- a/css/contactsMain.css
+++ b/css/contactsMain.css
@@ -392,3 +392,15 @@
     border: 3px solid white;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
 }
+
+.error-message {
+    color: #ff8190;
+    font-size: 14px;
+    margin-top: -27px;
+    margin-bottom: 12px;
+    display: none;
+}
+
+input.error {
+    border-color: #ff8190;
+}
