--- a/css/contactsResponsive1.css
+++ b/css/contactsResponsive1.css
@@ -345,6 +345,11 @@
     .contact-item{
         width: 100%;
     }
+    .error-message{
+        margin-top: -20px;
+        margin-bottom: 8px;
+        font-size: 12px;
+    }
 }
 
 @media (max-width: 768px) {
