--- a/css/boardOther.css
+++ b/css/boardOther.css
@@ -225,6 +225,7 @@
     .search-field-responsive,
     .board-overview {
         margin-left: 16px;
+        max-height: calc(100vh - 390px);
     }
     .search-field-responsive {
         width: 290px;
@@ -297,11 +298,11 @@
     }
     
     .board-header { 
-        top: 90px;
+        top: 75px;
     }
     .board-overview {
         transform: scale(0.95);
-        top: 90px;
+        top: 80px;
         max-height: calc(100vh - 246px);
         margin-left: 10px;
         margin-right: 10px; 
